# Smart_Glasses_Subcode

./: README.md
AIChat_demo/Client/: CMakeLists.txt
Smart_Glasses/: main.c  toolchain.cmake
Smart_Glasses/app/: app.c  app.h
Smart_Glasses/gui_app/: ui.c  ui.h
Smart_Glasses/gui_app/pages/ui_HomePage/: ui_HomePage.c
Smart_Glasses_demo/: CMakeLists.txt  README.md  main.c  main.cpp  signaling_server.js  test_ai_main.c  test_rtsp_camera.cpp  test_v4l2_main.c  test_v4l2_main.cpp  toolchain.cmake  web_client.html  webrtc连接方案.md  ws连接方案.md  图像采集方案.md  智能眼镜软件设计方案.md  音频处理方案.md
Smart_Glasses_demo/.cache/clangd/index/: aes.h.34E626AC6BDA1696.idx  aes_gcm.h.23A58BA1F9D319A8.idx  aes_gcm_ossl.c.EB5F802F730DFDED.idx  aes_icm_ext.h.AA76BB0A29D1B84E.idx  aes_icm_ossl.c.EFFA5A083C7C3137.idx  alloc.c.D2E24DAF88F7181C.idx  alloc.h.59CAAFD8932D522D.idx  auth.c.F0B70010A8B9870E.idx  auth.h.CAB6E0CD50DE2FBF.idx  auth_test_cases.c.25ED6F4B50F7A726.idx  auth_test_cases.h.2D2029DDA2397F9D.idx  cipher.c.6B7F8AFEB2F5FE79.idx  cipher.h.C661731D3A6F458E.idx  cipher_driver.c.3CDEF9B5642882B6.idx  cipher_priv.h.4AC6B53E64061B50.idx  cipher_test_cases.c.EE357DEFC3443B42.idx  cipher_test_cases.h.3488042893673236.idx  cipher_types.h.2AD35E1AE5DAB79A.idx  crypto_kernel.c.33E91B57E62B84E9.idx  crypto_kernel.h.C4A145B4D4699E82.idx  crypto_types.h.087B5358C2D51BA8.idx  cutest.h.FD2E22B02F7FFD27.idx  datatypes.c.5D642D0577A540F5.idx  datatypes.h.50164BCF5081801D.idx  datatypes_driver.c.25971A9A864C69EE.idx  err.c.E2E370167A69F7E8.idx  err.h.E6191943F2D39334.idx  getopt_s.c.D948D179F20B31FE.idx  getopt_s.h.CEEE675204D11F73.idx  hmac_ossl.c.A4F0CF457E3B92B4.idx  integers.h.67E448F9CB3BD9A5.idx  kernel_driver.c.37B8C9F951CA4DAD.idx  key.c.83579444FA1F3DAC.idx  key.h.2C58B4E4AB3C15A0.idx  null_auth.c.891585CD0EEB4D96.idx  null_auth.h.56567498A4ECF937.idx  null_cipher.c.B7DA38D7D195A74A.idx  null_cipher.h.7C44BFF870372C04.idx  rdb.c.EF4481559B383B5F.idx  rdb.h.FE978832A00B2E58.idx  (+20 more)
Smart_Glasses_demo/app/: CMakeLists.txt  app.c  app.h
Smart_Glasses_demo/app/chatbot/: chatbot.c  chatbot.cc  chatbot.h
Smart_Glasses_demo/app/chatbot/intent/: intent_handler.cc
Smart_Glasses_demo/app/chatbot/statemachine/: state_machine.cc
Smart_Glasses_demo/app/media/: media_config.h
Smart_Glasses_demo/app/media/audio/: audio.cc  audio.h
Smart_Glasses_demo/app/media/camera/: camera.cc  camera.h
Smart_Glasses_demo/app/media/camera/test/: test_camera.cc  test_camera.h
Smart_Glasses_demo/app/protocol/: protocol_config.h
Smart_Glasses_demo/app/protocol/rtsp/: rtsp.h
Smart_Glasses_demo/app/protocol/webrtc/: signaling.cc  signaling.h  webrtc.cc  webrtc.h
Smart_Glasses_demo/app/protocol/webrtc/test/: signaling.h
Smart_Glasses_demo/app/protocol/websocket/: websocket.cc  websocket.h
Smart_Glasses_demo/common/: CMakeLists.txt
Smart_Glasses_demo/libdatachannel/: CMakeLists.txt
Smart_Glasses_demo/test/: test_audio_main.cpp  test_camera_main.cpp  test_rtsp_camera.cpp  test_webrtc_main.cpp
libdatachannel/: CMakeLists.txt
libdatachannel/examples/streamer/: CMakeLists.txt
rkmpi_demos/: CMakeLists.txt
rkmpi_demos/c_interface/: CMakeLists.txt
rkmpi_demos/install/luckfox_pico_rtsp_opencv_capture_demo/: luckfox_pico_rtsp_opencv_capture
rkmpi_demos/install/luckfox_pico_rtsp_opencv_demo/: luckfox_pico_rtsp_opencv
